Added resizable attribute to b-panel

--- a/demo/b-panel.html
+++ b/demo/b-panel.html
@@ -53,5 +53,21 @@
                 </b-panel>
             </div>
         </div>
+
+        <div class="element-demo" id="resizable-demo">
+            <style>
+                .resizable-container {
+                    position: relative;
+                    height: 300px;
+                    background: #eee;
+                }
+            </style>
+            <div class="resizable-container">
+                <b-panel resizable style="position: absolute; top: 10px; left: 20px;">
+                    <b-panel-title>Lorem ipsum</b-panel-title>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                </b-panel>
+            </div>
+        </div>
     </body>
 </html>
