--- a/src/elements/b-panel.html
+++ b/src/elements/b-panel.html
@@ -70,7 +70,12 @@
                 },
 
                 createdCallback: function() {
-                    this.inject(Bosonic.Collapsible, this.wrapper);
+                    if (this.hasCustomAttribute('expandable')) {
+                        this.inject(Bosonic.Collapsible, this.wrapper);
+                        if (this.title && this.parentNode.nodeName !== 'B-PANELSET') {
+                            this.listen(this.title, 'tap', 'toggleExpansion');
+                        }
+                    }
                     if (this.hasCustomAttribute('removable')) this.inject(Bosonic.Removable);
                     if (this.hasCustomAttribute('resizable')) this.inject(Bosonic.Resizable);
                     if (this.hasCustomAttribute('draggable')) {
@@ -78,9 +83,6 @@
                             handle: this.title,
                             containment: this.getCustomAttribute('drag-containment')
                         });
-                    }
-                    if (this.hasCustomAttribute('expandable') && this.title) {
-                        this.listen(this.title, 'tap', 'toggleExpansion');
                     }
                 },
 
@@ -109,7 +111,7 @@
             float: right;
             content: "\25B4";
         }
-        b-panel[expandable='true'] > b-panel-title:after {
+        b-panel[expandable][open] > b-panel-title:after {
             float: right;
             content:'\25BE';
         }
