--- a/src/elements/b-panel.html
+++ b/src/elements/b-panel.html
@@ -63,11 +63,11 @@
             }
 
             Bosonic.register({
-                get title() {
+                get titleElement() {
                     return this.querySelector('b-panel-title');
                 },
 
-                get content() {
+                get contentElement() {
                     return this.shadowRoot.querySelector('.b-panel-content');
                 },
 
@@ -75,49 +75,49 @@
                     return this.shadowRoot.querySelector('.b-panel-content-wrapper');
                 },
 
-                get open() {
-                    return this.hasAttribute('open');
-                },
-
                 createdCallback: function() {
+                    this.inject(Bosonic.Collapsible, this.wrapper);
+                    if (!this.contentElement.id) this.contentElement.id = uid();
+                    if (this.parentNode.nodeName === 'B-PANELSET') {
+                        this.parentNode.registerPanel(this);
+                        return;
+                    }
                     if (this.hasCustomAttribute('expandable')) {
-                        this.inject(Bosonic.Collapsible, this.wrapper);
-                        if (this.title) {
-                            this.title.setAttribute('aria-expanded', this.open ? 'true' : 'false');
-                            if (!this.title.id) this.title.id = uid();
-                            if (!this.content.id) this.content.id = uid();
-                            this.content.setAttribute('aria-labelledby', this.title.id);
-                            this.title.setAttribute('aria-controls', this.content.id);
-                        }
-                        this.content.setAttribute('aria-hidden', this.open ? 'false' : 'true');
-                        if (!this.open) this.content.tabIndex = -1;
-
-                        if (this.title && this.parentNode.nodeName !== 'B-PANELSET') {
-                            this.listen(this.title, 'tap', 'toggleExpansion');
+                        this.contentElement.setAttribute('aria-hidden', this.open ? 'false' : 'true');
+                        if (!this.open) this.contentElement.tabIndex = -1;
+                        
+                        if (this.titleElement) {
+                            this.titleElement.setAttribute('aria-expanded', this.open ? 'true' : 'false');
+                            this.titleElement.setAttribute('aria-controls', this.contentElement.id);
+                            this.listen(this.titleElement, 'tap', 'toggleExpansion');
                         }
                     }
                     if (this.hasCustomAttribute('removable')) this.inject(Bosonic.Removable);
                     if (this.hasCustomAttribute('resizable')) this.inject(Bosonic.Resizable);
                     if (this.hasCustomAttribute('draggable')) {
                         this.inject(Bosonic.Draggable, { 
-                            handle: this.title,
+                            handle: this.titleElement,
                             containment: this.getCustomAttribute('drag-containment')
                         });
                     }
                 },
 
                 toggleExpansion: function() {
-                    if (this.open) {
-                        this.collapse();
-                        this.title.setAttribute('aria-expanded', 'false');
-                        this.content.setAttribute('aria-hidden', 'true');
-                        this.content.tabIndex = -1;
-                    } else {
-                        this.expand();
-                        this.title.setAttribute('aria-expanded', 'true');
-                        this.content.setAttribute('aria-hidden', 'false');
-                        this.content.tabIndex = 0;
-                    }
+                    this.hasAttribute('open') ? this.close() : this.open();
+                },
+
+                open: function() {
+                    this.expand();
+                    this.titleElement.setAttribute('aria-expanded', 'true');
+                    this.contentElement.setAttribute('aria-hidden', 'false');
+                    this.contentElement.tabIndex = 0;
+                },
+
+                close: function() {
+                    this.collapse();
+                    this.titleElement.setAttribute('aria-expanded', 'false');
+                    this.contentElement.setAttribute('aria-hidden', 'true');
+                    this.contentElement.tabIndex = -1;
                 }
             });
         })();
