Enhanced resizing button styling

--- a/src/elements/b-panel.html
+++ b/src/elements/b-panel.html
@@ -8,19 +8,19 @@
                 border-color: var(--b-panel-border);
                 border-radius: var(--b-panel-border-radius);
                 box-shadow: var(--b-panel-shadow);
+                background-color: var(--b-panel-content-bg);
+                overflow: hidden;
             }
             .b-panel-content-wrapper {
                 display: block;
                 margin: 0;
                 padding: 0;
-                overflow: hidden;
             }
             :host([expandable]:not([open])) .b-panel-content-wrapper {
                 display: none;
             }
             .b-panel-content {
                 display: block;
-                background-color: var(--b-panel-content-bg);
                 padding: var(--b-panel-content-padding);
                 margin: var(--bosonic-3d-effect-shadow-size) 0 0 0;
             }
@@ -37,11 +37,12 @@
                 display: block;
                 border: none;
                 position: absolute;
-                background-color: #ccc;
-                width: 8px;
-                height: 8px;
+                background-color: transparent;
                 bottom: 0px;
                 right: 0px;
+                padding: 0;
+                margin: 0;
+                line-height: 0.8em;
             }
             .b-panel-resize:hover {
                 cursor: se-resize;
