--- a/demo/b-panelset.html
+++ b/demo/b-panelset.html
@@ -18,6 +18,7 @@
             margin-bottom: 20px;
         }
         </style>
+        <h2>Accordion</h2>
         <div class="element-demo" id="accordion-demo">
             <b-panelset>
                 <b-panel>
@@ -31,6 +32,24 @@
                 <b-panel>
                     <b-panel-title>Lorem ipsum 3</b-panel-title>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+            </b-panelset>
+        </div>
+
+        <h2>Tabs</h2>
+        <div class="element-demo" id="tabs-demo">
+            <b-panelset preferreddisplay="tabs">
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 1</b-panel-title>
+                    <p>Lorem ipsum 1 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 2</b-panel-title>
+                    <p>Lorem ipsum 2 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+                </b-panel>
+                <b-panel>
+                    <b-panel-title>Lorem ipsum 3</b-panel-title>
+                    <p>Lorem ipsum 3 dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
                 </b-panel>
             </b-panelset>
         </div>
