--- a/demo/b-panel.html
+++ b/demo/b-panel.html
@@ -17,6 +17,7 @@
             margin-bottom: 20px;
         }
         </style>
+        <h1>Panels</h1>
         <div class="element-demo" id="basic-demo">
             <b-panel>
                 <b-panel-title>Lorem ipsum</b-panel-title>
@@ -24,6 +25,7 @@
             </b-panel>
         </div>
 
+        <h2>Removable</h2>
         <div class="element-demo" id="removable-demo">
             <b-panel removable>
                 <b-panel-title>Lorem ipsum</b-panel-title>
@@ -31,6 +33,7 @@
             </b-panel>
         </div>
 
+        <h2>Expandable</h2>
         <div class="element-demo" id="expandable-demo">
             <b-panel expandable open>
                 <b-panel-title>Lorem ipsum</b-panel-title>
@@ -38,6 +41,15 @@
             </b-panel>
         </div>
 
+        <h2>Expandable with height transition</h2>
+        <div class="element-demo" id="expandable-demo">
+            <b-panel expandable open open-transition="expand-height" close-transition="collapse-height">
+                <b-panel-title>Lorem ipsum</b-panel-title>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sapien sapien, ultrices eget posuere sed, facilisis at orci. Maecenas dignissim enim in magna iaculis consequat. Sed posuere mattis tellus, ut pharetra purus sagittis a. Praesent vitae nunc quis est commodo tincidunt quis vel nulla. Aenean scelerisque lectus sed consectetur vulputate. Phasellus porttitor justo quis orci scelerisque, cursus rutrum quam interdum. Aenean magna tellus, fringilla ac metus quis, ornare fringilla arcu. Praesent at nisl neque.</p>
+            </b-panel>
+        </div>
+
+        <h2>Draggable</h2>
         <div class="element-demo" id="draggable-demo">
             <style>
                 .draggable-container {
@@ -54,6 +66,7 @@
             </div>
         </div>
 
+        <h2>Resizable</h2>
         <div class="element-demo" id="resizable-demo">
             <style>
                 .resizable-container {
