Renamed b-panel wrapper property

--- a/src/elements/b-panel.html
+++ b/src/elements/b-panel.html
@@ -74,7 +74,7 @@
                     return this.shadowRoot.querySelector('.b-panel-content');
                 },
 
-                get wrapper() {
+                get contentWrapper() {
                     return this.shadowRoot.querySelector('.b-panel-content-wrapper');
                 },
 
@@ -108,7 +108,7 @@
                         this.setAttribute('open', '');
                         return;
                     }
-                    this.playTransition(this.getAttribute('open-transition'), this.wrapper).end(function() {
+                    this.playTransition(this.getAttribute('open-transition'), this.contentWrapper).end(function() {
                         this.setAttribute('open', '');
                     }.bind(this));
                 },
@@ -118,7 +118,7 @@
                         this.removeAttribute('open');
                         return;
                     }
-                    this.playTransition(this.getAttribute('close-transition'), this.wrapper).end(function() {
+                    this.playTransition(this.getAttribute('close-transition'), this.contentWrapper).end(function() {
                         this.removeAttribute('open');
                     }.bind(this));
                 },
