--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,8 @@
 
                 'elements/b-dialog.html',
                 'elements/b-notification.html',
-                'elements/b-switch.html'
+                'elements/b-switch.html',
+                'elements/b-panel.html'
             ]);
         </script>
     </body>
